# yextend

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTORS  COPYING  LICENSE  Makefile  Makefile.am  QUICKSTART  README.md  bayshore_content_scan.cpp  bayshore_content_scan.h  bayshore_yara_wrapper.c  bayshore_yara_wrapper.h  build.sh  configure.ac  filedata.cpp  filedata.h  filedissect.cpp  filedissect.h  main.cpp  run_yextend  wrapper.cpp  wrapper.h  zl.cpp  zl.h
dockerize/: README.md  build-container.sh  dockerfile-amd64-debian-buster  dockerfile-amd64-debian-jessie  dockerfile-amd64-debian-stretch  dockerfile-amd64-fedora  dockerfile-amd64-ubuntu-artful  dockerfile-amd64-ubuntu-bionic  dockerfile-amd64-ubuntu-xenial  dockerfile-armhf-raspbian-buster  dockerfile-armhf-raspbian-stretch  dockerfile-armhf-ubuntu-bionic  dockerfile-armhf-ubuntu-xenial
libs/: PDFParser.cpp  PDFParser.h  bayshore_file_type_detect.c  bayshore_file_type_detect.h  bayshore_file_type_detect.yara  bayshore_yara_wrapper.c  bayshore_yara_wrapper.h  bzl.cpp  bzl.h  json.hpp  pdf.cpp  pdf.h  pdf_font.cpp  pdf_font.h  pdf_object.cpp  pdf_object.h  pdf_parser.cpp  pdf_parser.h  pdf_parser_helper.cpp  pdf_parser_helper.h  pdf_text_encoding.h  zl.cpp  zl.h
test/: test_files_yextend.py
test_files/: AAA  FNAL_AM_Process_Procedures.docx  Huis-3D-Excel-Pendulum.xlsm  Huis-3D-Excel-Pendulum_97.xls  Huis-3D-Excel-Pendulum_mk2.xlsm  Huis_Excel_Pendulum_3D.xls  Huis_Excel_Pendulum_3D.xlsm  Lorem-winlogon.docx  Lorem-winlogon.docx.bz2  Lorem-winlogon.docx.gz.zip.tar.gz.bz2  Lorem-winlogon.docx.tar  Macro Excel Example - Automatic Report.xls  Macro Excel Gantt - Project Planning.xls  Test.7z  Test.docm  Test.docx  Test.docx.bz2  VirusShare_0059ec457f9f173260d2dcad8f1fbdf7  VirusShare_007f9182c475c9a049020b7307ec6d35  ZAPGettingStartedGuide-2.4.pdf.tar  archive_test_rar.rar  brute_screen.tiff  collab.wcm  comma.txt  embedded-exe.docx  guanggao.gif.bz2  guanggao.pptx  hmm.7z  office.odt  rands_tarball.tar.gz.bz2  sample.7z  sample.asp  sample.lib  sample.mdb  sample.mpg  sample.myi  sample.nt  sample.potx  sample.pps  sample.sfx  (+17 more)
test_rulesets/: bayshore.yara.testing.meta.ruleset  bayshore.yara.testing.ruleset  guanggao_rules.yara  lnk.yara  lorem_pdf.yara  msoffice_macro_rules.yara  msoffice_rules.yara  msofficex_rules.yara  pdf_multiple_embed.yara  zap_pdf_rules.yara
